2019-12-18  Daniel Shahaf  <danielsh@apache.org>

	* 45066: Src/builtin.c, Src/exec.c, Src/params.c: internal:
	Document forklevel, locallevel, and exit_pending.

	* 45065: Src/Makefile.in: Make 'make -s' print nothing when it
	does nothing.

	* 45064: Src/utils.c: Fix the mktemp() warning, in debug
	builds only.

	* 45073: Doc/Zsh/contrib.yo: regex-replace docs: Simplify grammar
	(avoid a double negative, state defaults first).

2019-12-17  Daniel Shahaf  <danielsh@apache.org>

	* 45058: Src/Modules/zpty.c, Src/Zle/zle_main.c, Src/builtin.c,
	Src/exec.c, Src/init.c, Src/signals.c, Src/subst.c, Src/zsh.h:
	internal: Add symbolic names to possible values of zexit()'s
	"from_where" parameter. No functional change.

	* unposted: Src/builtin.c: Update comment to reflect variable
	rename in 41012 (zsh-5.3.1-182-gd7110d8f0).

2019-12-16  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 44698, 45000: Baptiste BEAUPLAT: Completion for sbuild

	* github #36: Aurélien Olivier: Add completion file for GNU Stow

	* 45035: Doc/Zsh/zle.yo: be explicit about the need for
	a # in colours specified as hex triplets

2019-12-15  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 45025: Src/exec.c: fix re-entrancy problem with memory
	management in readoutput().  This could cause a signal
	received during $(...) to corrupt memory.

2019-12-14  dana  <dana@dana.is>

	* unposted: Config/version.mk, Etc/FAQ.yo, README: Update for
	5.7.1-test-1

2019-12-12  Peter Stephenson  <p.stephenson@samsung.com>

	* Martijn: 45009: Src/builtin.c, Doc/Zsh/builtins.yo,
	Doc/Zsh/options.yo: POSIX_CD needs to suppress special
	use of options so that POSIX-allowed argument forms work as
	expected.

	* 45001: Src/glob.c, Test/D04parameter.ztst: ${...%...} didn't
	test for zero-length matches, which should be preferred where
	possible.

2019-12-11  Martijn Dekker  <martijn@inlv.org>

	* 45004: Src/builtin.c, Src/compat.c, Src/exec.c, Src/glob.c,
	Src/hashtable.c, Src/hist.c, Src/init.c, Src/jobs.c,