@@ -732,7 +732,7 @@ exectry(Estate state, int do_exec)
     Wordcode end, always;
     int endval;
     int save_retflag, save_breaks, save_contflag;
-    zlong save_try_errflag, save_try_tryflag, save_try_interrupt;
+    zlong save_try_errflag, save_try_interrupt;
 
     end = state->pc + WC_TRY_SKIP(state->pc[-1]);
     always = state->pc + 1 + WC_TRY_SKIP(*state->pc);
@@ -741,12 +741,9 @@ exectry(Estate state, int do_exec)
     cmdpush(CS_CURSH);
 
     /* The :try clause */
-    save_try_tryflag = try_tryflag;
-    try_tryflag = 1;
-
+    ++try_tryflag;
     execlist(state, 1, do_exec);
-
-    try_tryflag = save_try_tryflag;
+    --try_tryflag;
 
     /* Don't record errflag here, may be reset.  However, */
     /* endval should show failure when there is an error. */
