@@ -1,5 +1,8 @@
 2019-12-18  Daniel Shahaf  <danielsh@apache.org>
 
+	* 45076: Src/loop.c: internal: Simplify handling of
+	try_tryflag. No functional change.
+
 	* 45066: Src/builtin.c, Src/exec.c, Src/params.c: internal:
 	Document forklevel, locallevel, and exit_pending.
 
